# CS171-ASSIGNMENTS

./: README.md
cs171-assignment1-Artanic30/: README.md  report_template_latex.rar
cs171-assignment1-Artanic30/Opengl_cmake_template/: README.md  assignment1.md
cs171-assignment1-Artanic30/Opengl_cmake_template/Doc/: Setup_Opengl_Linux.md
cs171-assignment1-Artanic30/Opengl_cmake_template/opengl-basic-linux/: CMakeLists.txt
cs171-assignment1-Artanic30/Opengl_cmake_template/opengl-basic-linux/src/: main.cpp  (+2 more)
cs171-assignment1-Artanic30/Opengl_cmake_template/opengl-basic-windows/: CMakeLists.txt
cs171-assignment1-Artanic30/report/: opengl-basic
cs171-assignment2-Artanic30/: .gitignore
cs171-assignment2-Artanic30/Doc/: Setup_Opengl_Windows.md
cs171-assignment2-Artanic30/assignment2/: README.html
cs171-assignment2-Artanic30/model/: p.mtl
cs171-assignment2-Artanic30/opengl-basic-linux/: CMakeLists.txt
cs171-assignment2-Artanic30/opengl-basic-linux/inc/: glad.c  my_texture.h
cs171-assignment2-Artanic30/opengl-basic-linux/src/: lamp.fs  lamp.vs  main.cpp  shader_m.fs  shader_m.vs  tiny_obj_loader.cc
cs171-assignment2-Artanic30/opengl-basic-windows/: CMakeLists.txt
cs171-assignment2-Artanic30/opengl-basic-windows/inc/: shader_m.h
cs171-assignment2-Artanic30/opengl-basic-windows/src/: lamp.fs  lamp.vs  main.cpp  shader_m.fs  shader_m.vs
cs171-assignment2-Artanic30/report/: executable.txt
cs171-assignment2-Artanic30/report_template_latex/: assignment.tex
cs171-assignment3-Artanic30/: README.md
cs171-assignment3-Artanic30/code/: CMakeLists.txt
cs171-assignment3-Artanic30/code/head/: camera.hpp  directLightingIntegrator.hpp  interaction.hpp  light.hpp  ray.hpp  refine.hpp  scene.hpp  shape.hpp  triangleMesh.hpp
cs171-assignment3-Artanic30/code/src/: main.cpp
cs171-assignment3-Artanic30/report_template_latex/: assignment.tex
cs171-assignment4-Artanic30/head/: interaction.hpp  light.hpp  material.hpp  pathTracingIntegrator.hpp  ray.hpp  scene.hpp  shape.hpp
cs171-assignment4-Artanic30/report/: assignment.tex
cs171-assignment4-Artanic30/src/: main.cpp
cs171-assignment5-Artanic30/: CMakeLists.txt  README.md
cs171-assignment5-Artanic30/README.assets/: demo.m4v
cs171-assignment5-Artanic30/head/: film.hpp  light.hpp  sampler.hpp
cs171-assignment5-Artanic30/pptx/: cg-transferfunc.pptx  cg-volumeRender.pptx  tutorial.pptx
cs171-assignment5-Artanic30/report/: assignment.tex
cs171-assignment5-Artanic30/src/: classifier.h  compositor.cpp  compositor.h  interpolator.h  main.cpp  opticsData.cpp  opticsData.h  renderer.cpp  renderer.h  volume.cpp  volume.h  volumeData.h  voxel.h
(+6 files in other folders)
